--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -15,8 +15,8 @@ RUN CGO_ENABLED=1 GOOS=linux go build -o /gorss main.go
 # Deploy the application binary into a lean image
 FROM debian:bookworm-slim AS build-release-stage
 
-RUN apt-get update && \
-    apt-get install -y ca-certificates
+RUN apt update && \
+    apt install -y ca-certificates
 
 WORKDIR /
 COPY --from=build-stage /gorss /gorss
