--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,8 @@
     "@fontsource/space-mono": "^5.2.5",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@tanstack/react-query": "^5.77.2",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.1"
