--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource-variable/jetbrains-mono": "^5.2.5",
+    "@fontsource/jetbrains-mono": "^5.2.5",
     "@fontsource/space-mono": "^5.2.5",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
