--- a/web/package.json
+++ b/web/package.json
@@ -19,12 +19,14 @@
     "@mui/material": "^7.1.0",
     "@tanstack/react-query": "^5.77.2",
     "axios": "^1.9.0",
+    "luxon": "^3.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
