--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -14,7 +14,7 @@ env:
   WEB_IMAGE_NAME: ${{ github.repository }}/gorss-web
 
 jobs:
-  build-docker-image:
+  build-api-docker-image:
     name: Build Docker Image
     runs-on: ubuntu-latest
 
@@ -47,6 +47,25 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  build-web-docker-image:
+    name: Build Docker Image
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.ghcr_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Web
         id: meta
