add manual trigger for db tests, update action name

--- a/.github/workflows/test-db-migrations.yml
+++ b/.github/workflows/test-db-migrations.yml
@@ -1,6 +1,7 @@
-name: test-db-migrations
+name: Test DB Migrations
 
 on:
+    workflow_dispatch:
     pull_request:
         paths:
             - migrations/**
