--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -1,83 +1,127 @@
-name: Build Docker Image
+name: Build & Deploy
 
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
-    tags:
-      - v*
+    workflow_dispatch:
+    push:
+        branches:
+            - main
+        tags:
+            - v*
 
 env:
-  REGISTRY: ghcr.io
-  API_IMAGE_NAME: ${{ github.repository }}/gorss
-  WEB_IMAGE_NAME: ${{ github.repository }}/gorss-web
+    REGISTRY: ghcr.io
+    API_IMAGE_NAME: ${{ github.repository }}/gorss
+    WEB_IMAGE_NAME: ${{ github.repository }}/gorss-web
 
 jobs:
-  build-api-docker-image:
-    name: Build Api Docker Image
-    runs-on: ubuntu-latest
+    build-api-docker-image:
+        name: Build Api Docker Image
+        runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      packages: write
+        permissions:
+            contents: read
+            packages: write
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+        steps:
+            -   name: Checkout Repository
+                uses: actions/checkout@v4
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.ghcr_TOKEN }}
+            -   name: Log in to the Container registry
+                uses: docker/login-action@v3
+                with:
+                    registry: ${{ env.REGISTRY }}
+                    username: ${{ github.actor }}
+                    password: ${{ secrets.ghcr_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Api
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.API_IMAGE_NAME }}
+            -   name: Extract metadata (tags, labels) for Api
+                id: meta
+                uses: docker/metadata-action@v5
+                with:
+                    images: ${{ env.REGISTRY }}/${{ env.API_IMAGE_NAME }}
 
-      - name: Build and push Api
-        uses: docker/build-push-action@v5
-        with:
-          file: docker/Dockerfile.api
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+            -   name: Build and push Api
+                uses: docker/build-push-action@v5
+                with:
+                    file: docker/Dockerfile.api
+                    context: .
+                    push: true
+                    tags: ${{ steps.meta.outputs.tags }}
+                    labels: ${{ steps.meta.outputs.labels }}
 
-  build-web-docker-image:
-    name: Build Web Docker Image
-    runs-on: ubuntu-latest
+    build-web-docker-image:
+        name: Build Web Docker Image
+        runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      packages: write
+        permissions:
+            contents: read
+            packages: write
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+        steps:
+            -   name: Checkout Repository
+                uses: actions/checkout@v4
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.ghcr_TOKEN }}
+            -   name: Log in to the Container registry
+                uses: docker/login-action@v3
+                with:
+                    registry: ${{ env.REGISTRY }}
+                    username: ${{ github.actor }}
+                    password: ${{ secrets.ghcr_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Web
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.WEB_IMAGE_NAME }}
+            -   name: Extract metadata (tags, labels) for Web
+                id: meta
+                uses: docker/metadata-action@v5
+                with:
+                    images: ${{ env.REGISTRY }}/${{ env.WEB_IMAGE_NAME }}
 
-      - name: Build and push Web
-        uses: docker/build-push-action@v5
-        with:
-          file: docker/Dockerfile.web
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+            -   name: Build and push Web
+                uses: docker/build-push-action@v5
+                with:
+                    file: docker/Dockerfile.web
+                    context: .
+                    push: true
+                    tags: ${{ steps.meta.outputs.tags }}
+                    labels: ${{ steps.meta.outputs.labels }}
+
+    deploy-railway-uat:
+        name: Redeploy Railway Services (UAT)
+        runs-on: ubuntu-latest
+        needs:
+            - build-api-docker-image
+            - build-web-docker-image
+        if: github.ref == 'refs/heads/main'
+        environment: gorss / uat
+
+        container: ghcr.io/railwayapp/cli:latest
+        env:
+            RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+            RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
+            RAILWAY_ENV: uat
+
+        steps:
+            -   name: Redeploy API service (pull latest image)
+                run: railway redeploy -p "$RAILWAY_PROJECT_ID" -e "$RAILWAY_ENV" -s "${{ secrets.RAILWAY_SERVICE_API }}" -y
+
+            -   name: Redeploy Web service (pull latest image)
+                run: railway redeploy -p "$RAILWAY_PROJECT_ID" -e "$RAILWAY_ENV" -s "${{ secrets.RAILWAY_SERVICE_WEB }}" -y
+
+    deploy-railway-prod:
+        name: Redeploy Railway Services (Production)
+        runs-on: ubuntu-latest
+        needs:
+            - build-api-docker-image
+            - build-web-docker-image
+        if: startsWith(github.ref, 'refs/tags/')
+        environment: gorss / production
+
+        container: ghcr.io/railwayapp/cli:latest
+        env:
+            RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+            RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
+            RAILWAY_ENV: production
+
+        steps:
+            -   name: Redeploy API service (pull latest image)
+                run: railway redeploy -p "$RAILWAY_PROJECT_ID" -e "$RAILWAY_ENV" -s "${{ secrets.RAILWAY_SERVICE_API }}" -y
+
+            -   name: Redeploy Web service (pull latest image)
+                run: railway redeploy -p "$RAILWAY_PROJECT_ID" -e "$RAILWAY_ENV" -s "${{ secrets.RAILWAY_SERVICE_WEB }}" -y
